# abasev2

./: .dockerignore  .easignore  .env.example  .gitignore  .npmrc  .tmp_april_passiveis_20260410.json  .tmp_april_passiveis_conferencia_20260410.json  COMANDOS_EXECUCAO.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.yml  iniciar-local.bat  package.json  pnpm-lock.yaml  turbo.json
apps/api/: alembic.ini  manage.py  pyproject.toml  requirements.txt
apps/api/api/: exception_handlers.py  router.py
apps/api/api/middleware/: auth_middleware.py
apps/api/api/v1/: analise_router.py  auth_router.py  cadastros_router.py  relatorios_router.py  router.py  schemas.py  sse_router.py  tesouraria_router.py
apps/api/app/: __init__.py  cache.py  config.py  db.py  main.py  utils.py
apps/api/app/auth/: __init__.py  factories.py  manager.py  permissions.py  strategies.py
apps/api/app/dependencies/: __init__.py  auth.py  db.py
apps/api/app/events/: __init__.py  websocket.py
apps/api/app/models/: __init__.py  associado.py  cadastro.py  event_log.py  user.py
apps/api/app/routers/: __init__.py  analise.py  auth.py  cadastros.py  health.py  relatorios.py  tesouraria.py
apps/api/app/schemas/: __init__.py  associado.py  auth.py  cadastro.py  event_log.py  user.py
apps/api/app/services/: __init__.py
apps/api/config/: __init__.py  celery.py  urls.py  urls_api.py
apps/api/config/settings/: base.py  development.py  fase2.py  production.py  testing.py
apps/api/core/: apps.py  exceptions.py
apps/api/core/auth/: __init__.py  rbac.py  (+4 more)
apps/api/migrations/: env.py
(+861 files in other folders)
